Fixed weird stretching behaviour with scrollbars

--- a/src/pages/style.scss
+++ b/src/pages/style.scss
@@ -11,9 +11,11 @@
     position: absolute;
 
     padding: $m-page-padding-top $m-page-padding-w $m-page-padding-bottom;
+    width: $m-page-fullscreen-w;
 
     @media only screen and (min-width: $tablet-width) {
       padding: $page-padding-top $page-padding-w $page-padding-bottom;
+      width: $page-fullscreen-w; //Fixes weird stretching behaviour with scroolbars
     }
   }
 }
